# Repositorio_ROS

./: README.md  aleatorios.py  waypoints.csv
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/ur5_notebook/: Tracker.h  blocks_poses.h
devel/lib/image_cv/: my_img_listener  my_img_publisher
devel/lib/pkgconfig/: demo_moveit_config.pc  hrl_geom.pc  image_cv.pc  my_robot_moveit_config.pc  pykdl_utils.pc  robotiq_description.pc  robotiq_gazebo.pc  ur10_e_moveit_config.pc  ur10_moveit_config.pc  ur3_e_moveit_config.pc  ur3_moveit_config.pc  ur5_e_moveit_config.pc  ur5_moveit_config.pc  ur5_notebook.pc  ur_bringup.pc  ur_description.pc  ur_driver.pc  ur_e_description.pc  ur_e_gazebo.pc  ur_gazebo.pc  ur_kinematics.pc  ur_msgs.pc  vision.pc
devel/lib/ur5_notebook/: blocks_poses_publisher  blocks_spawner
src/: README.md
src/image_cv/: CMakeLists.txt
src/image_cv/src/: my_img_listener.cpp  my_img_publisher.cpp
src/universal_robot/worlds/: camera.world
src/ur5_ROS-Gazebo/: ur5_gripper.py  ur5_mp.py
src/ur5_ROS-Gazebo/.setup_assistant/: .setup_assistant  CMakeLists.txt  package.xml
src/ur5_ROS-Gazebo/PText/: publictext.py
src/ur5_ROS-Gazebo/config/: demo_planning_execution.launch
src/ur5_ROS-Gazebo/launch/: prueba.py
src/ur5_ROS-Gazebo/old code/: testmotion.py  vision_follower.py
src/ur5_ROS-Gazebo/src/: testmotion.py
src/ur5_ROS-Gazebo/urdf/: bin.urdf  kinect.xacro  red_box.urdf  red_cylinder.urdf
src/ur5_ROS-Gazebo/worlds/: camera.world
src/vision/: CMakeLists.txt  package.xml  pub.py
src/vision/DH/: antesde.py  ciclo.py  (+26 more)
(+177 files in other folders)
